<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PaginaInicial">

    <TextView
        android:id="@+id/writeMsg"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="10sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle"
        android:text="@string/botao1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Escrever mensagem" />

    <TextView
        android:id="@+id/defaultMsg"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle"
        android:backgroundTint="#03F45B"
        android:text="@string/botao2"
        android:textScaleX="1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/writeMsg"
        tools:text="Mensagens Prontas" />


    <TextView
        android:id="@+id/dictionaire"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle"
        android:text="@string/botao3"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/defaultMsg"
        tools:text="Dicionario" />

    <Button
        android:id="@+id/buttonup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botao4"
        app:layout_constraintBottom_toTopOf="@+id/buttonok"
        app:layout_constraintStart_toStartOf="@id/buttondown"
        />

    <Button
        android:id="@+id/buttonok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botao5"
        app:layout_constraintBottom_toTopOf="@id/buttondown"
        app:layout_constraintStart_toStartOf="@id/buttondown"
        />


    <Button
        android:id="@+id/buttondown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botao6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/buttonnext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botaonext"
        app:layout_constraintStart_toEndOf="@id/buttonok"
        app:layout_constraintBottom_toTopOf="@id/buttondown"
        />

    <Button
        android:id="@+id/buttonback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/botaoback"
        app:layout_constraintEnd_toStartOf="@id/buttonok"
        app:layout_constraintBottom_toTopOf="@id/buttondown"
        />




</android.support.constraint.ConstraintLayout>