<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EscreverMensagens">

    <TextView
        android:id="@+id/text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:text="@string/text_message"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="35dp" />

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textSize="15sp"
        tools:ignore="LabelFor"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="62dp" />

    <Button
        android:id="@+id/show_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:text="@string/show_message"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="103dp" />

    <TextView
        android:id="@+id/message_displayer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:text=""
        android:textSize="25sp"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="151dp" />

    <Button
        android:id="@+id/buttonnext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="136dp"
        android:text="@string/botaonext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonok" />

    <Button
        android:id="@+id/buttonback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="136dp"
        android:text="@string/botaoback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonok"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>